# Quake

./: CMakeLists.txt
WinQuake/: CMakeLists.txt  quakedef.h  snd_sdl.c  sys_sdl.c  vid_sdl.c
